feat: Add swagger ui handlers
